# rust-http

./: .gitignore  .hgignore  .travis.yml  COPYRIGHT  Cargo.toml  Makefile  Makefile.in  README  README.rst  build.sh  configure  prebuild  prebuild.sh
codegen/: Cargo.toml  branchify.rs  main.rs  read_method.rs  status.rs
codegen/src/: branchify.rs  main.rs  read_method.rs  status.rs
comparisons/: README.txt  apache_fake.go  apache_fake.js  run.py
doc/: client-plan.rst
documentation/: client-plan.rst
examples/: apache_fake.rs  client.rs  hello_world.rs  info.rs  one_time_server.rs  request_uri.rs
src/: Makefile  ws2.rs  ws3.rs
src/codegen/: branchify.rs  main.rs  read_method.rs  status.rs
src/examples/: apache_fake.rs  hello_world.rs  info.rs  request_uri.rs
src/examples/client/: client.rs  main.rs
src/examples/server/: apache_fake.rs  info.rs
src/http/: buffer.rs  common.rs  connecter.rs  lib.rs  memstream.rs  method.rs  rfc2616.rs
src/http/client/: api.rs  mod.rs  request.rs  response.rs  tests.rs
src/http/headers/: accept_ranges.rs  connection.rs  content_type.rs  etag.rs  host.rs  mod.rs  serialization_utils.rs  test_utils.rs  transfer_encoding.rs
src/http/server/: mod.rs  request.rs  response.rs
src/libhttp/: buffer.rs  common.rs  headers.rs  lib.rs  memstream.rs  method.rs  request.old.rs  request.rs  rfc2616.rs  server.rs
src/libhttp/client/: mod.rs  (+3 more)
src/librusthttpserver/: adapter.rs  buffer.rs  generate_status.py  headers.rs  method.rs  methods.rs  mod.rs  request.old.rs  request.rs  response.rs  rfc2616.rs  rusthttpserver.rs  server.rs  status.rs
(+30 files in other folders)
