[package]
name = "http"
version = "0.1.0-pre"
authors = [ "Chris Morgan <me@chrismorgan.info>" ]
build = "codegen/main.rs"

[lib]
name = "http"
path = "src/http/lib.rs"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl.git"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.time]
git = "https://github.com/rust-lang/time"
