[package]
name = "old-http"
version = "0.1.1-pre"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "Obsolete HTTP library"
#documentation =
#homepage =
repository = "https://github.com/chris-morgan/rust-http"
readme = "README.rst"
keywords = ["web", "http", "library"]
license = "MIT/Apache-2.0"
build = "codegen/main.rs"

[features]
default = ["ssl"]
ssl = ["openssl"]

[lib]
name = "http"
path = "src/http/lib.rs"

[dependencies.openssl]
version = "0.2"
optional = true

[dependencies.url]
version = "0.2"

[dependencies.time]
version = "0.1"
